samples/_failures_safe/1761449820_dcf91b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39f3dbfd.c: In function ‘main’:
./samples/SAFE/__tmp_39f3dbfd.c:136:19: error: expected ‘)’ at end of input
  136 |     read_matrix(&a
      |                ~  ^
      |                   )
./samples/SAFE/__tmp_39f3dbfd.c:136:5: error: too few arguments to function ‘read_matrix’
  136 |     read_matrix(&a
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_39f3dbfd.c:40:6: note: declared here
   40 | void read_matrix(Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~
./samples/SAFE/__tmp_39f3dbfd.c:136:5: error: expected declaration or statement at end of input
  136 |     read_matrix(&a
      |     ^~~~~~~~~~~
